--- a/index.html
+++ b/index.html
@@ -48,6 +48,20 @@
       .hamburger{display:block;margin-left:auto}
       #site-footer .hf-nav{display:none !important}
     }
+
+    /* index専用 */
+    section{margin:60px auto}
+    h1,h2,h3{margin:0 0 20px;font-weight:700}
+    h1{font-size:36px;text-align:center}
+    h2{font-size:26px;border-left:4px solid #1976d2;padding-left:10px;margin-bottom:20px}
+    h3{font-size:20px;margin-bottom:10px}
+    p{margin:0 0 14px}
+    .lead{font-size:20px;text-align:center;margin-bottom:30px;color:#374151}
+    .card{background:#fff;padding:32px;border-radius:12px;box-shadow:0 2px 10px rgba(0,0,0,.08);margin-bottom:30px}
+    .topics ul{list-style:none;padding:0}
+    .topics li{margin-bottom:12px;border-bottom:1px solid #e5e7eb;padding-bottom:8px}
+    .cta{text-align:center;margin-top:40px}
+    .cta a{display:inline-block;padding:12px 28px;background:#1976d2;color:#fff;border-radius:8px;text-decoration:none}
   </style>
 </head>
 <body>
@@ -55,8 +69,66 @@
 
   <main id="page-content" aria-live="polite">
     <div class="container">
-      <h1>「できない」「わからない」を支援する会社『WaJu』</h1>
-      <p>ここにトップページ用の本文を入れてください。</p>
+
+      <section>
+        <h1>「できない」「わからない」を支援する会社『WaJu』</h1>
+        <p class="lead">“あんなことができたらいいな”“こんなものがあったら便利だな” を形にする。</p>
+        <div class="card">
+          <p>社会福祉の一環として、介護業界の時間的・金銭的負担を軽減する事業からスタートし、将来的には幅広い社会的支援ができる企業を目指しています。</p>
+          <p>絶えず前進するための <b>Walk</b>、そして躍進するための <b>Jump</b> を心掛け、社会に貢献していきます。</p>
+        </div>
+      </section>
+
+      <section>
+        <h2>事業内容</h2>
+        <div class="card">
+          <h3>介護事業所マッチング＆SNS</h3>
+          <p>ケアマネジャーや相談員の方と介護サービス提供事業所を効果的につなぐ革新的なサービス <b>CARELAY</b> をリリースしています。</p>
+          <p>介護業界の営業コストを軽減し、最適な連携が生まれるよう、ぜひご活用をご検討ください！</p>
+          <div class="cta"><a href="#">詳しくはこちら</a></div>
+        </div>
+      </section>
+
+      <section class="topics">
+        <h2>Topics</h2>
+        <div class="card">
+          <ul>
+            <li>2025年9月1日　「CARELAY」再稼働のお知らせ</li>
+            <li>2024年12月25日　弊社サービス「CARELAY」のチラシができました。</li>
+            <li>2024年9月27日　弊社サービス「CARELAY」紹介資料</li>
+            <li>2024年9月26日　プレスリリース配信サービス「valuepress」に掲載していただきました。</li>
+            <li>2024年9月23日　「CARELAY」案内</li>
+          </ul>
+          <div class="cta"><a href="#">もっと見る</a></div>
+        </div>
+      </section>
+
+      <section>
+        <h2>一から会社を、一緒に創っていきましょう</h2>
+        <div class="card">
+          <p>合同会社WaJuはまだできたての会社です。同じ志を持ち、会社を一緒に作り上げていける方を募集しております。</p>
+          <p>当社の提供するサービスをよく理解し、全国へ普及させていくという強い意志をお持ちの方は、ぜひご応募ください。</p>
+          <div class="cta"><a href="#">もっと見る</a></div>
+        </div>
+      </section>
+
+      <section>
+        <h2>お問い合わせ</h2>
+        <div class="card">
+          <p>サービスに関するお問い合わせ、求人情報に関するお問い合わせ、その他ご質問やご要望がございましたら、フォームよりお気軽にご連絡ください。</p>
+          <div class="cta"><a href="contact.html">お問い合わせフォームへ</a></div>
+        </div>
+      </section>
+
+      <section>
+        <h2>会社情報</h2>
+        <div class="card">
+          <p>合同会社WaJu</p>
+          <p>〒658-0052　兵庫県神戸市東灘区住吉東町2丁目7-20-102</p>
+          <p><a href="mailto:info@waju.co.jp">info@waju.co.jp</a></p>
+        </div>
+      </section>
+
     </div>
   </main>
 
@@ -137,10 +209,10 @@
       $("#site-header").innerHTML = `
         <div class="hf-bg" id="hf-header-bg" style="background:${backgroundShorthand};">
           <div class="container">
-            <div class="${cls}" style="${ff};--gap:${num(d.link_spacing,16)}px; padding:${paddingY}; height:${num(d.bar_height,60)}px;">
+            <div class="${cls}" style="${ff};--gap:${num(d.link_spacing,16)}px; padding:${paddingY};">
               <div class="slot brand" style="${brandJustifyMargins(d.company_alignment)}">
                 <div class="hf-brand">
-                  ${d.logo_url?`<img src="${d.logo_url}" alt="logo" style="max-height:${num(d.logo_height||d.bar_height,60)}px">`:""}
+                  ${d.logo_url?`<img src="${d.logo_url}" alt="logo" style="max-height:${num(d.logo_height||60,60)}px">`:""}
                   <span style="color:${d.company_color};font-weight:${d.company_weight};font-size:${num(d.header_company_size,18)}px">${d.company_name||""}</span>
                 </div>
               </div>
@@ -179,25 +251,36 @@
       $("#site-footer").innerHTML = `
         <div class="hf-bg" id="hf-footer-bg" style="background:${backgroundShorthand};">
           <div class="container">
-            <div class="${cls}" style="${ff};--gap:${num(d.link_spacing,16)}px; padding:${paddingY}; height:${num(d.bar_height,60)}px;">
+            <div class="${cls}" style="${ff};--gap:${num(d.link_spacing,16)}px; padding:${paddingY};">
               ${inner}
             </div>
           </div>
         </div>`;
-      if(d.footer_fixed){const wrap=$("#hf-footer-bg");Object.assign(wrap.style,{position:"fixed",left:"0",right:"0",bottom:"0",zIndex:"1000",width:"100%"});}
     }
 
     function buildDrawer(menus){
-      const list=(menus||[]).filter(m=>m.is_active);
-      $("#drawer-nav").innerHTML=list.map(m=>`<a href="${linkOf(m)}">${m.title}</a>`).join("");
-      $("#drawer-close").addEventListener("click",closeDrawer);
-      $("#mobile-drawer [data-close]").addEventListener("click",closeDrawer);
-      document.addEventListener("keydown",e=>{if(e.key==="Escape")closeDrawer();});
+      const items = menus.filter(m=>m.is_active).map(m=>`<a href="${linkOf(m)}">${m.title}</a>`).join("");
+      $("#drawer-nav").innerHTML = items;
     }
-    function openDrawer(){$("#mobile-drawer").setAttribute("aria-hidden","false");$("#hamburger")?.setAttribute("aria-expanded","true");document.body.style.overflow="hidden";setTimeout(()=>$("#drawer-close")?.focus(),100);}
-    function closeDrawer(){$("#mobile-drawer").setAttribute("aria-hidden","true");$("#hamburger")?.setAttribute("aria-expanded","false");document.body.style.overflow="";}
-    function adjustOffsets(hdr,ftr){const h=$("#hf-header-bg"),f=$("#hf-footer-bg");document.body.style.paddingTop=(hdr?.header_fixed&&h)?h.getBoundingClientRect().height+"px":"";document.body.style.paddingBottom=(ftr?.footer_fixed&&f)?f.getBoundingClientRect().height+"px":"";}
-    function addResizeObserver(hdr,ftr){const ro=new ResizeObserver(()=>adjustOffsets(hdr,ftr));const h=$("#hf-header-bg"),f=$("#hf-footer-bg");if(h)ro.observe(h);if(f)ro.observe(f);window.addEventListener('resize',()=>adjustOffsets(hdr,ftr));}
+
+    function openDrawer(){const d=$("#mobile-drawer");d.setAttribute("aria-hidden","false");$("#hamburger").setAttribute("aria-expanded","true");}
+    function closeDrawer(){const d=$("#mobile-drawer");d.setAttribute("aria-hidden","true");$("#hamburger").setAttribute("aria-expanded","false");}
+    $("#drawer-close")?.addEventListener("click", closeDrawer);
+    $("#mobile-drawer .overlay")?.addEventListener("click", closeDrawer);
+
+    function adjustOffsets(h,f){
+      const headerEl=$("#hf-header-bg");const footerEl=$("#hf-footer-bg");
+      const body=document.body;
+      body.style.paddingTop=headerEl?`${headerEl.offsetHeight}px`:"0";
+      body.style.paddingBottom=footerEl?`${footerEl.offsetHeight}px`:"0";
+    }
+
+    function addResizeObserver(h,f){
+      const ro=new ResizeObserver(()=>adjustOffsets(h,f));
+      const headerEl=$("#hf-header-bg");const footerEl=$("#hf-footer-bg");
+      if(headerEl) ro.observe(headerEl); if(footerEl) ro.observe(footerEl);
+    }
+
     loadHF();
   </script>
 </body>
